--- a/Lab1/Lab11/index.html
+++ b/Lab1/Lab11/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="dist/script.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
